fix photo album collapse on mobile

--- a/app/assets/stylesheets/photos.scss
+++ b/app/assets/stylesheets/photos.scss
@@ -2,13 +2,14 @@
   .row-container {
     display: flex;
     flex-wrap: wrap;
-    justify-content: left;
-    gap: 2rem;
+    justify-content: center;
+    gap: 20px; //8rem;
     margin-bottom: 20px;
   }
 
   .card {
-    width: 300px;
+    flex: 0 1 300px;
+    max-width: 100%;
     height: 400px;
     position: relative;
     overflow: hidden;
